# naomech

./: .gitignore  CMakeLists.txt  LICENSE  README.md  naomech_doc  qiproject.xml
HardwareAccess/: module.cmake
controller/: CMakeLists.txt
controller/resources/: config.json
controller/src/: main.cpp
hardware/: CMakeLists.txt
hardware/include/RD/hardware/: Accelerometer.h  Camera.h  Clock.h  Device.hpp  Gyro.h  Joints.h  Robot.h
hardware/include/bhuman/: CameraCalibration.h  CameraInfo.h  CameraMatrix.h  ForwardKinematic.h  InverseKinematic.h  JointCalibration.h  JointData.h  MassCalibration.h  Pose2D.h  Pose3D.h  RobotDimensions.h  Transformation.h  Vector4.h
hardware/include/bhuman/representations/configuration/: CameraCalibration.h  JointCalibration.h  MassCalibration.h  RobotDimensions.h
hardware/include/bhuman/representations/infrastructure/: CameraInfo.h
hardware/include/bhuman/representations/perception/: CameraMatrix.h
hardware/include/bhuman/tools/: Boundary.h  ForwardKinematic.h  InverseKinematic.h
hardware/include/bhuman/tools/math/: BHMath.h  Matrix.h  Matrix3x3.h  Transformation.h  Vector2.h  Vector3.h
hardware/include/nb/: AbstractGait.h  BasicWorldConstants.h  COMKinematics.h  Common.h  CoordFrame.h  EKF.h  EKFStructs.h  Gait.h  GaitConstants.h  InverseKinematics.h  Kinematics.h  MetaGait.h  MotionConstants.h  NBMath.h  NBMatrixMath.h  Observer.h  SensorAngles.h  SpringSensor.h  Step.h  StepGenerator.h  Structs.h  WalkController.h  WalkingArm.h  WalkingConstants.h  WalkingLeg.h  ZmpAccEKF.h  ZmpEKF.h
hardware/include/rd/control/: Kinematics.h
hardware/include/rd/hardware/: Accelerometer.h  Actuator.h  Angle.h  Camera.h  Clock.h  CvImage.h  Gyro.h  Image.h  Joints.h  Kinematics.h  LEDs.h  Locomotion.h  RemoteAccelerometer.h  RemoteAngle.h  RemoteCamera.h  RemoteGyro.h  RemoteJoints.h  RemoteKinematics.h  RemoteLEDs.h  RemoteLocomotion.h  Robot.h  Sensor.h  SensorData.h  TypeDefinition.h
hardware/include/rd/remote/control/: RemoteKinematics.h
hardware/include/rd/remote/hardware/: RemoteAccelerometer.h  RemoteCamera.h  RemoteGyro.h  RemoteJoints.h  RemoteLEDs.h
hardware/include/rd/representation/: Color.h  Image.h  SensorData.h
hardware/src/: Accelerometer.cpp  Clock.cpp  Gyro.cpp  Joints.cpp  LEDs.cpp  RemoteJoints.cpp  Robot.cpp
hardware/src/bhuman/: CameraInfo.cpp  CameraMatrix.cpp  Matrix.cpp  RotationMatrix.cpp  Transformation.cpp
hardware/src/bhuman/representations/infrastructure/: CameraInfo.cpp
hardware/src/bhuman/representations/perception/: CameraMatrix.cpp
hardware/src/bhuman/tools/: Matrix.cpp  RotationMatrix.cpp  Transformation.cpp
hardware/src/control/: Kinematics.cpp
hardware/src/hardware/: Accelerometer.cpp  Camera.cpp  Clock.cpp  Gyro.cpp  Joints.cpp  LEDs.cpp  Robot.cpp
hardware/src/nb/: AbstractGait.cpp  COMKinematics.cpp  CoordFrame3D.cpp  CoordFrame4D.cpp  Gait.cpp  InverseKinematics.cpp  MetaGait.cpp  NBMath.cpp  NBMatrixMath.cpp  Observer.cpp  SensorAngles.cpp  SpringSensor.cpp  Step.cpp  StepGenerator.cpp  WalkingArm.cpp  WalkingLeg.cpp  ZmpAccEKF.cpp  ZmpEKF.cpp
hardware/src/rd/hardware/: Accelerometer.cpp  Angle.cpp  Camera.cpp  Clock.cpp  Gyro.cpp  Joints.cpp  Kinematics.cpp  LEDs.cpp  Locomotion.cpp  RemoteAccelerometer.cpp  RemoteAngle.cpp  RemoteCamera.cpp  RemoteGyro.cpp  RemoteJoints.cpp  RemoteKinematics.cpp  RemoteLEDs.cpp  RemoteLocomotion.cpp  Robot.cpp
hardware/src/remote/control/: RemoteKinematics.cpp
hardware/src/remote/hardware/: RemoteAccelerometer.cpp  RemoteCamera.cpp  RemoteGyro.cpp  RemoteJoints.cpp  RemoteLEDs.cpp
hardware/src/representation/: Color.cpp
naoqi/hwcontroller/: CMakeLists.txt
naoqi/hwcontroller/include/rd/naoqi/hwcontroller/: HWController.h
naoqi/hwcontroller/src/: HWController.cpp  main.cpp
network/: CMakeLists.txt
network/include/RD/network/: RPCMethod.h  RPCModule.h  RPCServer.h
network/include/rd/network/: RPCMethod.h  RPCModule.h  RPCServer.h  RemoteMethod.h  RemoteModule.h
network/src/: RPCMethod.cpp  RPCModule.cpp  RPCServer.cpp  RemoteMethod.cpp  RemoteModule.cpp
tools/managers/: CMakeLists.txt  managers.cpp  vision_manager.cpp
tools/managers/include/: BaseManager.h  LineDetectorManager.h  Param.h
tools/managers/src/: BaseManager.cpp  LineDetectorManager.cpp
vision/: CMakeLists.txt
vision/include/: RemoteVision.h  Vision.h
vision/include/detectors/: BallDetector.h  BaseDetector.h  LineDetector.h
vision/include/managers/: BaseManager.h  LineDetectorManager.h
vision/include/utils/: CoreFuntions.h  Logger.h  Param.h  Stopwatch.h
vision/src/: RemoteVision.cpp  Vision.cpp
vision/src/detectors/: BallDetector.cpp  BaseDetector.cpp  LineDetector.cpp
vision/src/managers/: BaseManager.cpp  LineDetectorManager.cpp
vision/src/utils/: Logger.cpp  Stopwatch.cpp
vision/tests/: main.cpp
xmlrpc-c/src/: CMakeLists.txt  abyss_handler.c  abyss_handler.h  double.c  double.h  json.c  method.c  method.h  parse_datetime.c  parse_datetime.h  parse_value.c  parse_value.h  registry.c  registry.h  resource.c  system_method.c  system_method.h  trace.c  version.c  xmlrpc.pc.cmake  xmlrpc_array.c  xmlrpc_authcookie.c  xmlrpc_build.c  xmlrpc_client.c  xmlrpc_client.pc.cmake  xmlrpc_client_global.c  xmlrpc_data.c  xmlrpc_datetime.c  xmlrpc_decompose.c  xmlrpc_libxml2.c  xmlrpc_parse.c  xmlrpc_serialize.c  xmlrpc_server.pc.cmake  xmlrpc_server_abyss.c  xmlrpc_server_abyss.pc.cmake  xmlrpc_server_cgi.c  xmlrpc_server_cgi.pc.cmake  xmlrpc_server_info.c  xmlrpc_string.c  xmlrpc_struct.c
xmlrpc-c/src/cpp/: CMakeLists.txt  XmlRpcCpp.cpp  base64.cpp  client.cpp  client_simple.cpp  curl.cpp  env_wrap.cpp  env_wrap.hpp  fault.cpp  girerr.cpp  girmem.cpp  outcome.cpp  packetsocket.cpp  param_list.cpp  pstream.cpp  registry.cpp  server_abyss.cpp  server_cgi.cpp  server_pstream.cpp  server_pstream_conn.cpp  value.cpp  xml.cpp  xmlrpc++.pc.cmake  xmlrpc_client++.pc.cmake  xmlrpc_cpp.pc.cmake  xmlrpc_packetsocket.pc.cmake  xmlrpc_server++.pc.cmake  xmlrpc_server_abyss++.pc.cmake  xmlrpc_server_cgi++.pc.cmake  xmlrpc_server_pstream++.pc.cmake
(+181 files in other folders)
