cmake_minimum_required(VERSION 2.8)

find_package(BOOST REQUIRED COMPONENTS System)
find_package(BOOST_CHRONO REQUIRED)
find_package(BOOST_FILESYSTEM REQUIRED)
find_package(BOOST_SYSTEM REQUIRED)
find_package(BOOST_THREAD REQUIRED)
find_package(BOOST_PROGRAM_OPTIONS REQUIRED)
find_package(BOOST_REGEX REQUIRED)
find_package(BOOST_LOCALE REQUIRED)
find_package(ALVALUE REQUIRED)
find_package(ALERROR REQUIRED)
find_package(QIMESSAGING REQUIRED)
find_package(QITYPE REQUIRED)
find_package(BOOST_DATE_TIME REQUIRED)
find_package(BOOST_SIGNALS REQUIRED)
find_package(RTTOOLS REQUIRED)
find_package(ZLIB REQUIRED)
find_package(ALCOMMON REQUIRED)
find_package(ALPROXIES REQUIRED)
find_package(QI REQUIRED)

set(SRCS src/main.cpp)

set(HEADERS)

set(INCLUDE_DIRS ${RD_HARDWARE_INCLUDE_DIRS}
        ${RD_NETWORK_INCLUDE_DIRS}
        ${BOOST_INCLUDE_DIRS}
        ${ALCOMMON_INCLUDE_DIRS}
        ${ALPROXIES_INCLUDE_DIRS}
        ${BOOST_CHRONO_INCLUDE_DIRS}
        ${BOOST_FILESYSTEM_INCLUDE_DIRS}
        ${BOOST_SYSTEM_INCLUDE_DIRS}
        ${BOOST_THREAD_INCLUDE_DIRS}
        ${BOOST_PROGRAM_OPTIONS_INCLUDE_DIRS}
        ${BOOST_REGEX_INCLUDE_DIRS}
        ${BOOST_LOCALE_INCLUDE_DIRS}
        ${ALVALUE_INCLUDE_DIRS}
        ${ALERROR_INCLUDE_DIRS}
        ${QIMESSAGING_INCLUDE_DIRS}
        ${QITYPE_INCLUDE_DIRS}
        ${BOOST_DATE_TIME_INCLUDE_DIRS}
        ${BOOST_SIGNALS_INCLUDE_DIRS}
        ${RTTOOLS_INCLUDE_DIRS}
        ${QI_INCLUDE_DIRS}
        ${ZLIB_INCLUDE_DIRS})

set(LIBS ${BOOST_LIBRARIES}
        ${BOOST_CHRONO_LIBRARIES}
        ${BOOST_FILESYSTEM_LIBRARIES}
        ${BOOST_SYSTEM_LIBRARIES}
        ${BOOST_THREAD_LIBRARIES}
        ${BOOST_PROGRAM_OPTIONS_LIBRARIES}
        ${BOOST_REGEX_LIBRARIES}
        ${BOOST_LOCALE_LIBRARIES}
        ${ALVALUE_LIBRARIES}
        ${ALERROR_LIBRARIES}
        ${QIMESSAGING_LIBRARIES}
        ${QITYPE_LIBRARIES}
        ${BOOST_DATE_TIME_LIBRARIES}
        ${BOOST_SIGNALS_LIBRARIES}
        ${RTTOOLS_LIBRARIES}
        ${ALCOMMON_LIBRARIES}
        ${ALPROXIES_LIBRARIES}
        ${QI_LIBRARIES}
        ${ALPROXIES_LIBRARILES}
        ${RD_HARDWARE_LIBRARIES}
        ${RD_NETWORK_LIBRARIES}
        ${ZLIB_LIBRARIES}
        xmlrpc++
        xmlrpc_server_abyss++)

add_executable(controller ${SRCS} ${HEADERS})

target_include_directories(controller PUBLIC ${INCLUDE_DIRS})

target_link_libraries(controller ${LIBS})

install(TARGETS controller
        RUNTIME DESTINATION bin)